<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Facebook Sample</string>
    <string name="app_id">728617340528535</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="publish_feed">Publish feed</string>
    <string name="publish_story">Publish story</string>
    <string name="invite_all">Invite all</string>
    <string name="invite_one">Invite one</string>
    <string name="invite_suggested">Invite suggested</string>
    <string name="get_my_profile">Get my profile</string>
    <string name="get_my_profile_with_properties">Get my profile (Properties)</string>
    <string name="get_friends">Get friends</string>
    <string name="get_friends_with_properties">Get friends (Properties)</string>
    <string name="fb_feed_caption">Know who are your best friends</string>
    <string name="fb_feed_description">With Besties, the exciting new social game, you will be able to find out how truly do you know your friends</string>
    <string name="fb_feed_link">https://play.google.com/store/apps/details?id=com.besties</string>
    <string name="fb_feed_name">Besties</string>
    <string name="fb_feed_message">Who dare to be my opponent? :)</string>
    <string name="fb_feed_image">http://romkuapps.com/Apps/Socialist/blue_version_2.png</string>
    <string name="fragment_example_">Fragment example >></string>
    <string name="publish_photo">Publish photo</string>
    <string name="get_albums">Get albums</string>
    <string name="load_more">load more...</string>

</resources>