<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Login to facebook -->

        <Button
            android:id="@+id/button_login"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/login" />

        <!-- Logout to facebook -->

        <Button
            android:id="@+id/button_logout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/logout" />

        <!-- Status of login/logout -->

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:text="" />

        <!-- Publish Feed -->

        <Button
            android:id="@+id/button_publish_feed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/publish_feed" />

        <!-- Publish Story -->

        <Button
            android:id="@+id/button_publish_story"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_publish_feed"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/publish_story" />

        <!-- Publish Photo -->

        <Button
            android:id="@+id/button_publish_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_publish_story"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/publish_photo" />

        <!-- Invite all -->

        <Button
            android:id="@+id/button_invite_all"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button_publish_photo"
            android:layout_margin="10dp"
            android:text="@string/invite_all" />

        <!-- Invite one -->

        <Button
            android:id="@+id/button_invite_one"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/button_publish_photo"
            android:layout_margin="10dp"
            android:text="@string/invite_one" />

        <!-- Invite suggested -->

        <Button
            android:id="@+id/button_invite_suggested"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_below="@id/button_publish_photo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/invite_suggested" />

        <!-- Get my profile -->

        <Button
            android:id="@+id/button_get_profile"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button_invite_suggested"
            android:layout_margin="10dp"
            android:text="@string/get_my_profile" />

        <!-- Get my profile with properties -->

        <Button
            android:id="@+id/button_get_profile_with_properties"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/button_invite_suggested"
            android:layout_margin="10dp"
            android:text="@string/get_my_profile_with_properties" />

        <!-- Get friends -->

        <Button
            android:id="@+id/button_get_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_get_profile"
            android:layout_margin="10dp"
            android:text="@string/get_friends" />

        <!-- Get albums -->

        <Button
            android:id="@+id/button_get_albums"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_get_friends"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/get_albums" />

        <!-- Fragment -->

        <Button
            android:id="@+id/button_fragments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_get_albums"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/fragment_example_" />
    </RelativeLayout>

</ScrollView>